--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -909,26 +909,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[   67,    34],\n",
-       "       [ 6546, 10558]])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "\n",
+      "  high_risk       0.01      0.75      0.56      0.02      0.65      0.43       101\n",
+      "   low_risk       1.00      0.56      0.75      0.72      0.65      0.41     17104\n",
+      "\n",
+      "avg / total       0.99      0.56      0.75      0.71      0.65      0.41     17205\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "\n",
-    "confusion_matrix(y_test, y_pred)"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
